# GSEApy

./: Cargo.toml
gseapy/: gsea.py  gsva.py
